--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,3 +20,10 @@ tide = "0.16.0"
 async-std = { version = "1.6.0", features = ["attributes"] }
 serde = { version = "1.0", features = ["derive"] }
 hex = "0.4.3"
+
+
+
+[profile.release]
+opt-level = 3
+lto = true  # 也可以在发布模式中使用LTO
+codegen-units = 1  # 进一步优化链接
